--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div class="contact-text">
                             <p>Please feel free to reach out with any inquiries or for assistance.</p>
                             <p>We are here to help!</p>
-                            <p> Photo here</p>
+                            <p>Photo of someone here</p>
                         </div>
                         <div class="contact-details">
                             <div class="contact-item">
