changed alt text and testing if it is the specific images that are not working or the wrapper /location of images in page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <section class="icon-grid">
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/paint-roller-solid.svg" alt="Icon 1">   
+                                <img src="images/icons/location-dot-solid.svg" alt="A solid style icon of a paint roller.">   
                             </div>
                             <div class="icon-text-container">
                                 <p>Paints</p>
@@ -91,7 +91,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/person-digging-solid.svg" alt="Icon 3">
+                                <img src="images/icons/person-digging-solid.svg" alt="A solid style icon of a man digging aggregates e.g. sand, type 1.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Aggregates</p>
@@ -107,7 +107,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/lightbulb-solid.svg" alt="Icon 2">
+                                <img src="images/icons/lightbulb-solid.svg" alt="A lightbuild, probably halogen.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Electrical supplies</p>
@@ -115,7 +115,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/faucet-drip-solid.svg" alt="Icon 3">
+                                <img src="images/icons/faucet-drip-solid.svg" alt="A dripping faucet - this probably requires a plumber!">
                             </div>
                             <div class="icon-text-container">
                                 <p>Plumbing supplies</p>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/trowel-bricks-solid.svg" alt="Icon 3">
+                                <img src="images/icons/trowel-bricks-solid.svg" alt="A trowel being used to build a brick wall.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Building materials</p>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/toolbox-solid.svg" alt="Icon 3">
+                                <img src="images/icons/toolbox-solid.svg" alt="A closed toolbox.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Tools</p>
@@ -139,7 +139,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/hammer-solid.svg" alt="Icon 3">
+                                <img src="images/icons/hammer-solid.svg" alt="A hammer.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Fixings</p>
@@ -147,7 +147,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/key-solid.svg" alt="Icon 3">
+                                <img src="images/icons/key-solid.svg" alt="A key that has been cut.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Locks and keys</p>
@@ -155,7 +155,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/broom-solid.svg" alt="Icon 3">
+                                <img src="images/icons/broom-solid.svg" alt="A broom used to sweep your home.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Homeware</p>
