made some sections dynamic

--- a/index.html
+++ b/index.html
@@ -21,19 +21,17 @@
         <main>
             <section>
                 <div class="wrapper" id="about">
-                    <h2>About Us</h2>photo here
-                    <div class="wrapper" id="about-photo-text">
-                        <!--Put a photo here alongside some text-->
+                    <h2>About Us</h2>
+                    <div class="about-content">
+                        <div class="about-image">
+                            <img src="images/stock-yard.jpg" alt="Someone in a builders yard with a delivery truck behind.">
+                        </div>
+                        <div class="about-text">
+                            <p><strong>Your local timber and Builders' merchants.</strong></p>
+                            <p>Our Caterham store has supplied products and materials to trade professionals and self-builders across the south since 1989. We offer a wide range of quality timber, building materials, plumbing and heating, landscaping, painting and decorating essentials and tools for the job.</p>
+                            <p>Call, email, or visit us in store to get the best prices.</p>
+                        </div>
                     </div>
-                    <p> 
-                        <strong> Your local timber and Builders' merchants.</strong>
-                    </p>
-                    <p>
-                        Our Caterham store has supplied products and materials to trade professionals and self-builders across the south since 1989. We offer a wide range of quality timber, building materials, plumbing and heating, landscaping, painting and decorating essentials and tools for the job.
-                    </p>
-                    <p>
-                        Call, email or visiting us in store to get the best prices
-                    </p>
                 </div>
             </section>
             <section>
@@ -59,7 +57,7 @@
                                     <img src="images/icons/phone-solid.svg" alt="Phone Icon">
                                 </div>
                                 <div class="text">
-                                    <p>Call us on <a href="tel:01883344700">01883344700</a></p>
+                                    <p>Call us on <a href="tel:01883344700">01883 344700</a></p>
                                 </div>
                             </div>
                             <div class="contact-item">
@@ -67,7 +65,7 @@
                                     <img src="images/icons/envelope-solid.svg" alt="Email Icon">
                                 </div>
                                 <div class="text">
-                                    <p>Email our sales team <a href="mailto:YOUR_EMAIL_HERE">enquiries@dunwoodys.com</a></p>
+                                    <p>Email our sales team <a href="mailto:enquiries@dunwoodys.com">enquiries@dunwoodys.com</a></p>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +81,8 @@
                     <section class="icon-grid">
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/location-dot-solid.svg" alt="A solid style icon of a paint roller.">   
+                                <!-- Consider making these svgs? -->
+                                <img width="90" height="90" src="images/icons/paint-roller-solid.svg" alt="A solid style icon of a paint roller.">                            
                             </div>
                             <div class="icon-text-container">
                                 <p>Paints</p>
