--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
                 <div class="wrapper" id="contact">
                     <h2>Contact Us</h2>
                     <div class="contact-columns">
-                        <div class="contact-text">
-                            <p>Please feel free to reach out with any inquiries or for assistance.</p>
-                            <p>We are here to help!</p>
-                            <p>Photo of someone here</p>
+                        <div class="contact-container">
+                            <div class="contact-text">
+                                <p>Please feel free to reach out with any inquiries or for assistance.</p>
+                                <p>We are here to help!</p>
+                            </div>
+                            <div class="contact-image">
+                                <img src="images/stock-yard.jpg" alt="Someone in a builders yard with a delivery truck behind.">
+                            </div>
                         </div>
                         <div class="contact-details">
                             <div class="contact-item">
@@ -82,7 +86,7 @@
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
                                 <!-- Consider making these svgs? -->
-                                <img width="90" height="90" src="images/icons/paint-roller-solid.svg" alt="A solid style icon of a paint roller.">                            
+                                <img class="icon-grid-svg" src="images/icons/paint-roller-solid.svg" alt="A solid style icon of a paint roller.">                            
                             </div>
                             <div class="icon-text-container">
                                 <p>Paints</p>
@@ -90,7 +94,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/person-digging-solid.svg" alt="A solid style icon of a man digging aggregates e.g. sand, type 1.">
+                                <img class="icon-grid-svg" src="images/icons/person-digging-solid.svg" alt="A solid style icon of a man digging aggregates e.g. sand, type 1.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Aggregates</p>
@@ -98,7 +102,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/fence-solid.svg" alt="Icon 3">
+                                <img class="icon-grid-svg" src="images/icons/fence-solid.svg" alt="Icon 3">
                             </div>
                             <div class="icon-text-container">
                                 <p>Fencing</p>
@@ -106,7 +110,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/lightbulb-solid.svg" alt="A lightbuild, probably halogen.">
+                                <img class="icon-grid-svg" src="images/icons/lightbulb-solid.svg" alt="A lightbuild, probably halogen.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Electrical supplies</p>
@@ -114,7 +118,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/faucet-drip-solid.svg" alt="A dripping faucet - this probably requires a plumber!">
+                                <img class="icon-grid-svg" src="images/icons/faucet-drip-solid.svg" alt="A dripping faucet - this probably requires a plumber!">
                             </div>
                             <div class="icon-text-container">
                                 <p>Plumbing supplies</p>
@@ -122,7 +126,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/trowel-bricks-solid.svg" alt="A trowel being used to build a brick wall.">
+                                <img class="icon-grid-svg" src="images/icons/trowel-bricks-solid.svg" alt="A trowel being used to build a brick wall.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Building materials</p>
@@ -130,7 +134,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/toolbox-solid.svg" alt="A closed toolbox.">
+                                <img class="icon-grid-svg" src="images/icons/toolbox-solid.svg" alt="A closed toolbox.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Tools</p>
@@ -138,7 +142,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/hammer-solid.svg" alt="A hammer.">
+                                <img class="icon-grid-svg" src="images/icons/hammer-solid.svg" alt="A hammer.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Fixings</p>
@@ -146,7 +150,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/key-solid.svg" alt="A key that has been cut.">
+                                <img class="icon-grid-svg" src="images/icons/key-solid.svg" alt="A key that has been cut.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Locks and keys</p>
@@ -154,7 +158,7 @@
                         </div>
                         <div class="icon-grid-item">
                             <div class="icon-image-container">
-                                <img src="images/icons/broom-solid.svg" alt="A broom used to sweep your home.">
+                                <img class="icon-grid-svg" src="images/icons/broom-solid.svg" alt="A broom used to sweep your home.">
                             </div>
                             <div class="icon-text-container">
                                 <p>Homeware</p>
